API improve order and item doc. New method for get user list
