# app/Models/Order/Item.php
@@ -8,9 +8,36 @@ use App\Models\Order;
 use App\Models\Product;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ *  @OA\Schema(
+ *    schema="OrderItem",
+ *    type="object",
+ *    required={"product_id", "quantity"},
+ *    @OA\Property(
+ *        property="product_id",
+ *        description="Product ID of the Item",
+ *        type="int",
+ *        example="1"
+ *    ),
+ *    @OA\Property(
+ *        property="quantity",
+ *        description="Quantity of the Item",
+ *        type="int",
+ *        example="3"
+ *    )
+ *  )
+ */
 final class Item extends Model
 {
     protected $table = 'order_item';
+
+    protected $fillable = [
+
+    ];
+
+    protected $hidden = [
+        'deleted_at',
+    ];
 
     private ?int $order_id;
 
